--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "data/discordData.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/discordData.ts"],
   "exclude": ["node_modules"]
 }
