--- a/package.json
+++ b/package.json
@@ -19,11 +19,22 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.3.1",
+    "@trpc/client": "9.26",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "9.26",
+    "@trpc/server": "9.26",
+    "clsx": "^1.2.1",
     "framer-motion": "^6",
     "next": "12.2.0",
+    "next-auth": "^4.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
+    "react-query": "3",
+    "superjson": "^1.9.1",
+    "swr": "^1.3.0",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
@@ -31,6 +42,7 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "prisma": "^4.3.1",
     "typescript": "4.7.4"
   }
 }
