--- a/package.json
+++ b/package.json
@@ -1,48 +1,47 @@
 {
-  "name": "website",
+  "name": "ayan-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@fontsource/ibm-plex-mono": "^4.5.10",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
-    "@trpc/client": "9.26",
+    "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
-    "@trpc/react": "9.26",
-    "@trpc/server": "9.26",
-    "clsx": "^1.2.1",
-    "framer-motion": "^6",
-    "next": "12.2.0",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
+    "hamburger-react": "^2.5.0",
+    "next": "12.3.1",
     "next-auth": "^4.10.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "3",
-    "superjson": "^1.9.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-query": "3.39.2",
+    "superjson": "^1.10.0",
     "swr": "^1.3.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
     "prisma": "^4.3.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
+  },
+  "ct3aMetadata": {
+    "initVersion": "5.13.0"
   }
 }
