--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "chalk": "^5.1.0",
     "framer-motion": "^7.3.6",
     "hamburger-react": "^2.5.0",
     "next": "12.3.1",
