--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
     "chalk": "^5.1.0",
+    "clsx": "^1.2.1",
     "framer-motion": "^7.3.6",
     "hamburger-react": "^2.5.0",
     "next": "12.3.1",
