--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "3.39.2",
+    "react-use-lanyard": "^0.1.4",
     "superjson": "^1.10.0",
     "swr": "^1.3.0",
+    "ws": "^8.9.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.12",
