--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
+    "@react-three/drei": "^9.37.0",
+    "@react-three/fiber": "^8.8.10",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "@types/three": "^0.144.0",
     "chalk": "^5.1.0",
     "clsx": "^1.2.1",
     "framer-motion": "^7.3.6",
@@ -29,6 +32,8 @@
     "react-use-lanyard": "^0.1.4",
     "superjson": "^1.10.0",
     "swr": "^1.3.0",
+    "three": "^0.145.0",
+    "three-stdlib": "^2.17.3",
     "ws": "^8.9.0",
     "zod": "^3.18.0"
   },
