--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "clsx": "^1.2.1",
     "framer-motion": "^7.3.6",
     "hamburger-react": "^2.5.0",
-    "next": "12.3.1",
+    "next": "^13.1.0",
     "next-auth": "^4.10.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "3.39.2",
     "react-use-lanyard": "^0.1.4",
@@ -47,7 +47,7 @@
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.12",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.1.0",
     "postcss": "^8.4.16",
     "prisma": "^4.3.1",
     "tailwindcss": "^3.1.8",
